--- a/IngresoPedidos/ProcesandoWindow.xaml
+++ b/IngresoPedidos/ProcesandoWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="IngresoPedidos.ProcesandoWindow"
      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-     Height="100" Width="200" FontFamily="Segoe UI" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" SizeToContent="WidthAndHeight" Icon="/IngresoPedidos;component/Resources/agregar.ico" ShowInTaskbar="False" WindowStyle="SingleBorderWindow" KeyDown="OnKeyDown">
+     Height="100" Width="200" FontFamily="Segoe UI" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" SizeToContent="WidthAndHeight" Icon="/IngresoPedidos;component/Resources/lista.png" ShowInTaskbar="False" WindowStyle="SingleBorderWindow" KeyDown="OnKeyDown">
 
     <Grid Width="194" Height="72">
         <TextBlock x:Name="lblProcesando" Text="Cargando..." TextTrimming="CharacterEllipsis" DockPanel.Dock="Top" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,5,0,0" />
