--- a/IngresoPedidos/MostrarImagenWindow.xaml
+++ b/IngresoPedidos/MostrarImagenWindow.xaml
@@ -1,11 +1,10 @@
-﻿<Window x:Class="IngresoPedidos.Views.ImagenView"
+﻿<Window x:Class="IngresoPedidos.MostrarImagenWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:IngresoPedidos.Views"
         mc:Ignorable="d"
-        Title="NOTEBOOK EF21" Height="480" Width="720" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Icon="/IngresoPedidos;component/Resources/lista.png">
+        Title="NOTEBOOK EF21" Height="480" Width="720" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Icon="/IngresoPedidos;component/Resources/imagen_64x64.png">
     <Grid>
         <!--<Border BorderThickness="2" BorderBrush="#FFA9D1F4" Margin="10">-->
         <Image Source="/IngresoPedidos;component/Resources/sample.jpg" Margin="10"/>
