--- a/IngresoPedidos/App.xaml
+++ b/IngresoPedidos/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="IngresoPedidos.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="LoginWindow.xaml">
+             StartupUri="MainWindow.xaml">
     
     <Application.Resources>
         
@@ -96,7 +96,7 @@
 
         <!--#region  DataGrid Column Header-->
         <Style x:Key="ColumnHeaderStyle" TargetType="{x:Type DataGridColumnHeader}">
-            <Setter Property="FontFamily" Value="Segoe UI"/>
+            <Setter Property="FontFamily" Value="Consolas"/>
             <Setter Property="SnapsToDevicePixels" Value="True" />
             <Setter Property="Background" Value="#FFA9D1F4"/>
             <Setter Property="FontWeight" Value="Bold"/>
@@ -104,7 +104,7 @@
             <Setter Property="BorderThickness" Value="0" />
             <Setter Property="BorderBrush" Value="GhostWhite" />
             <Setter Property="Foreground" Value="Black" />
-            <Setter Property="FontSize" Value="16" />
+            <Setter Property="FontSize" Value="14" />
             <Setter Property="Padding" Value="5,0,0,0"/>
             <Setter Property="Margin" Value="0,1,0,1"/>
         </Style>
