--- a/IngresoPedidos/App.xaml
+++ b/IngresoPedidos/App.xaml
@@ -2,15 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
-    
     <Application.Resources>
-        
-        <!--#region ToolBar-->
-        <Style x:Name="ToolBarStyle" TargetType="{x:Type ToolBar}">
-            <Setter Property="Background" Value="#FFA9D1F4"/>
-        </Style>
-        <!--#endregion-->
-        
+
         <!--#region DataGrid-->
         <Style x:Name="MainDataGridStyle" TargetType="{x:Type DataGrid}">
             <Setter Property="Height" Value="Auto" />
@@ -28,7 +21,6 @@
             <Setter Property="CanUserResizeColumns" Value="False"/>
             <Setter Property="CanUserResizeRows" Value="False"/>
             <Setter Property="CanUserSortColumns" Value="False"/>
-            <Setter Property="Margin" Value="10,64,10,10"/>
             <Setter Property="AutoGenerateColumns" Value="False"/>
             <Setter Property="IsReadOnly" Value="True"/>
             <Setter Property="SelectionMode" Value="Extended"/>
@@ -98,12 +90,12 @@
         <Style x:Key="ColumnHeaderStyle" TargetType="{x:Type DataGridColumnHeader}">
             <Setter Property="FontFamily" Value="Consolas"/>
             <Setter Property="SnapsToDevicePixels" Value="True" />
-            <Setter Property="Background" Value="#FFA9D1F4"/>
+            <Setter Property="Background" Value="#2C3E50"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="ContextMenu" Value="{x:Null}"/>
             <Setter Property="BorderThickness" Value="0" />
-            <Setter Property="BorderBrush" Value="GhostWhite" />
-            <Setter Property="Foreground" Value="Black" />
+            <Setter Property="BorderBrush" Value="#2C3E50" />
+            <Setter Property="Foreground" Value="#ECF0F1" />
             <Setter Property="FontSize" Value="14" />
             <Setter Property="Padding" Value="5,0,0,0"/>
             <Setter Property="Margin" Value="0,1,0,1"/>
@@ -116,7 +108,7 @@
             <Setter Property="Background" Value="#FFE6E6E6"/>
             <Setter Property="FontWeight" Value="Normal"/>
             <Setter Property="ContextMenu" Value="{x:Null}"/>
-            <Setter Property="Margin" Value="1,0,0,0"/>
+            <!--<Setter Property="Margin" Value="1,0,0,0"/>-->
             <Style.Triggers>
                 <Trigger Property="AlternationIndex" Value="1">
                     <Setter Property="Background" Value="{x:Null}"/>
@@ -173,7 +165,7 @@
         <!--#endregion-->
         
         
-        <!--#region Rounded Button-->
+        <!--#region Rounded Button--><!--
         
         <Style x:Key="RoundCorner" TargetType="{x:Type Button}">
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -206,7 +198,7 @@
                         </Grid>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsPressed" Value="True">
-                                <!--<Setter Property="Background" TargetName="border">
+                                --><!--<Setter Property="Background" TargetName="border">
                                     <Setter.Value>
                                         <RadialGradientBrush GradientOrigin="0.496,1.052">
                                             <RadialGradientBrush.RelativeTransform>
@@ -219,7 +211,7 @@
                                             <GradientStop Color="#FF303030" Offset="0.3"/>
                                         </RadialGradientBrush>
                                     </Setter.Value>
-                                </Setter>-->
+                                </Setter>--><!--
                             </Trigger>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter Property="BorderBrush" TargetName="border" Value="#FF33962B"/>
@@ -234,9 +226,9 @@
             </Setter>
         </Style>
 
-        <!--#endregion-->
+        --><!--#endregion-->
         
-        <!--#region RoundedButto 2-->
+        <!--#region RoundedButtoN 2--><!--
 
         <Style x:Key="RoundButtonTemplate" TargetType="Button">
             <Setter Property="Background" Value="Brown"/>
@@ -255,7 +247,7 @@
             </Setter>
         </Style>
 
-        <!--#endregion-->
+        --><!--#endregion-->
         
         <!--#region Rounded Button 48-->
 
@@ -266,7 +258,32 @@
                 <Setter.Value>
                     <ControlTemplate TargetType ="{x:Type Button}">
                         <Grid>
-                            <Ellipse Name ="OuterRing" Width ="52" Height ="52" Fill ="Transparent"/>
+                            <Ellipse Name ="OuterRing" Width ="50" Height ="50" Fill ="Transparent"/>
+                            <Ellipse Name ="InnerRing" Width ="48" Height ="48" Fill ="#CC4452"/>
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property ="IsMouseOver" Value ="True">
+                                <Setter TargetName ="OuterRing" Property ="Fill" Value ="LightCyan"/>
+                            </Trigger>
+                            <Trigger Property ="IsPressed" Value ="True">
+                                <Setter TargetName="OuterRing" Property="Fill" Value="Cyan"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <!--#region Rounded Button Add(Green InnerRing)-->
+
+        <Style x:Key ="roundButtonTemplateGreen" TargetType ="{x:Type Button}" BasedOn="{StaticResource roundButtonTemplate48}">
+            <Setter Property ="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType ="{x:Type Button}">
+                        <Grid>
+                            <Ellipse Name ="OuterRing" Width ="50" Height ="50" Fill ="Transparent"/>
+                            <Ellipse Name ="InnerRing" Width ="48" Height ="48" Fill ="#468966"/>
                             <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Grid>
                         <ControlTemplate.Triggers>
@@ -293,7 +310,8 @@
                 <Setter.Value>
                     <ControlTemplate TargetType ="{x:Type Button}">
                         <Grid>
-                            <Ellipse Name ="OuterRing" Width ="36" Height ="36" Fill ="Transparent"/>
+                            <Ellipse Name ="OuterRing" Width ="34" Height ="34" Fill ="Transparent"/>
+                            <Ellipse Name ="InnerRing" Width ="32" Height ="32" Fill ="#CC4452"/>
                             <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Grid>
                         <ControlTemplate.Triggers>
