--- a/IngresoPedidos/MainWindow.xaml
+++ b/IngresoPedidos/MainWindow.xaml
@@ -2,9 +2,18 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="clr-namespace:IngresoPedidos"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="INGRESO DE PEDIDOS: PRODUCCION EXO" Height="768" Width="1366" WindowStartupLocation="CenterScreen" WindowState="Maximized" Icon="/IngresoPedidos;component/Resources/lista_64x64.png">
+        
+        Title="INGRESO DE PEDIDOS: PRODUCCION EXO" Height="768" Width="1366" WindowStartupLocation="CenterScreen" WindowState="Maximized" Icon="/IngresoPedidos;component/Resources/list.png">
+
+    <Window.CommandBindings>
+        <CommandBinding Command="{x:Static local:MainWindow.NuevoPedidoCommand}" Executed="NuevoPedidoCommandExecuted"/>
+    </Window.CommandBindings>
+    <Window.InputBindings>
+        <KeyBinding Key="E" Modifiers="Control" Command="NuevoPedidoCommand"/>
+    </Window.InputBindings>
 
     <Grid Name="mainGrid">
         <Grid.RowDefinitions>
@@ -14,22 +23,23 @@
         <Grid Background="#2C3E50" Grid.Row="0">
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
 
-                <Button x:Name="btnNuevoPedido" Click="btnNuevoPedido_Click" Style="{StaticResource roundButtonTemplateGreen}" ToolTip="Ingresar un Nuevo Pedido a la Base de Datos (CTRL+N)" VerticalAlignment="Center" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Margin="10,0,0,0" HorizontalAlignment="Left">
-                <Image Source="/IngresoPedidos;component/Resources/add_t.png" Width="48" Height="48" />
+                <Button x:Name="btnNuevoPedido" Click="btnNuevoPedido_Click" Style="{StaticResource roundButtonTemplateGreen}" ToolTip="Ingresar un Nuevo Pedido a la Base de Datos (CTRL+N)" VerticalAlignment="Center" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Margin="5,5,5,5" HorizontalAlignment="Left">
+                <Image Source="/IngresoPedidos;component/Resources/add.png" Width="48" Height="48" />
             </Button>
 
-            <Button x:Name="btnExportarPlanilla" Style="{StaticResource roundButtonTemplate48}" ToolTip="Exportar lista a planilla de cálculos (CTRL+X)" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
-                <Image Source="/IngresoPedidos;component/Resources/xls_t.png" Width="48" Height="48" />
+                <Button x:Name="btnExportarPlanilla" Style="{StaticResource roundButtonTemplate48}" ToolTip="Exportar lista a planilla de cálculos (CTRL+X)"  HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
+                <Image Source="/IngresoPedidos;component/Resources/xls.png" Width="48" Height="48" />
             </Button>
 
-            <Button x:Name="btnBuscarPedido" Click="btnBuscarPedido_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Buscar un pedido en la Base de Datos (CTRL+B)" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
-                <Image Source="/IngresoPedidos;component/Resources/search_t.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="48" Height="48" />
+                <Button x:Name="btnBuscarPedido" Click="btnBuscarPedido_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Buscar un pedido en la Base de Datos (CTRL+B)" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
+                <Image Source="/IngresoPedidos;component/Resources/search.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="48" Height="48" />
             </Button>
 
-            <Button x:Name="btnFiltrarLista" Click="btnFiltrarLista_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Filtrar la lista por Estado (CTRL+F)" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
-                <Image Source="/IngresoPedidos;component/Resources/list_t.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="48" Height="48" />
+                <Button x:Name="btnFiltrarLista" Click="btnFiltrarLista_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Filtrar la lista por Estado (CTRL+F)" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
+                <Image Source="/IngresoPedidos;component/Resources/list.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="48" Height="48" />
             </Button>
 
+            <!--#region botones del contextmenulist-->
                 <!--<Button x:Name="a1" Click="btnFiltrarLista_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Filtrar la lista por Estado (CTRL+F)" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
                     <Image Source="/IngresoPedidos;component/Resources/image_t.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="48" Height="48" />
                 </Button>
@@ -61,7 +71,7 @@
                 <Button x:Name="a8" Click="btnFiltrarLista_Click" Style="{StaticResource roundButtonTemplate48}" ToolTip="Filtrar la lista por Estado (CTRL+F)" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}">
                     <Image Source="/IngresoPedidos;component/Resources/comment_t.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="48" Height="48" />
                 </Button>-->
-
+    <!--#endregion-->
 
             </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
@@ -69,12 +79,12 @@
                 <Label Margin="0" Foreground="#ECF0F1" VerticalContentAlignment="Center" TextOptions.TextFormattingMode="Display" Padding="5,0" HorizontalContentAlignment="Center" Content="SCHNEIDER NICOLAS" Background="{x:Null}" FontFamily="Consolas" FontWeight="Bold" BorderBrush="{x:Null}"/>
             </Border>
 
-            <Button x:Name="btnCambiarContraseña" Click="btnCambiarContraseña_Click" Style="{StaticResource roundButtonTemplate32}" ToolTip="Cambiar contraseña" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}" Width="36" Height="36">
-                <Image Source="/IngresoPedidos;component/Resources/key_t.png" Width="32" Height="32" />
+                <Button x:Name="btnCambiarContraseña"  Style="{StaticResource roundButtonTemplate32}" ToolTip="Cambiar contraseña" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="5,5,2,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}" Width="36" Height="36">
+                <Image Source="/IngresoPedidos;component/Resources/key.png" Width="32" Height="32" />
             </Button>
 
-            <Button x:Name="btnCerrarSesion" Click="btnCerrarSesion_Click" Style="{StaticResource roundButtonTemplate32}" ToolTip="Cerrar sesión" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Width="36" Height="36">
-                <Image Source="/IngresoPedidos;component/Resources/door_t.png" Width="32" Height="32" />
+                <Button x:Name="btnCerrarSesion" Click="btnCerrarSesion_Click" Style="{StaticResource roundButtonTemplate32}" ToolTip="Cerrar sesión" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="2,5,5,5" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" Width="36" Height="36">
+                <Image Source="/IngresoPedidos;component/Resources/door.png" Width="32" Height="32" />
             </Button>
 
         </StackPanel>
@@ -86,14 +96,15 @@
             </DataGrid.Resources>
             
             <DataGrid.ContextMenu>
-                <ContextMenu>
-                    <MenuItem x:Name="ctxmnuEditar" Header="Editar registro" InputGestureText="Ctrl+E" Click="ctxmnuEditar_Click">
+                <ContextMenu PreviewMouseLeftButtonDown="ContextMenu_PreviewMouseLeftButtonDown">
+                    
+                    <MenuItem x:Name="ctxmnuEditar" Header="Editar registro" InputGestureText="Ctrl+E" Command="NuevoPedidoCommand">
                         <MenuItem.Icon>
                             <Image Source="/IngresoPedidos;component/Resources/lapiz_16x16.ico"/>
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Header="Agregar una observación" InputGestureText="Ctrl+O" Click="MenuItem_Click">
+                    <MenuItem Header="Agregar una observación" InputGestureText="Ctrl+O">
                         <MenuItem.Icon>
                             <Image Source="/IngresoPedidos;component/Resources/comentario_16x16.ico"/>
                         </MenuItem.Icon>
@@ -109,13 +120,13 @@
 
                     <Separator/>
 
-                    <MenuItem Header="Agregar a lista personalizada" InputGestureText="Ctrl+A">
+                    <MenuItem Name="miAgregarPersonalizada" Header="Agregar a lista personalizada" InputGestureText="Ctrl+A">
                         <MenuItem.Icon>
                             <Image Source="/IngresoPedidos;component/Resources/agregar_16x16.ico"/>
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Header="Quitar de lista personalizada" InputGestureText="Ctrl+Q">
+                    <MenuItem Name="miQuitarPersonalizada" Header="Quitar de lista personalizada" InputGestureText="Ctrl+Q">
                         <MenuItem.Icon>
                             <Image Source="/IngresoPedidos;component/Resources/quitar_16x16.ico"/>
                         </MenuItem.Icon>
