--- a/IngresoPedidos/MainWindow.xaml
+++ b/IngresoPedidos/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:IngresoPedidos"
+        xmlns:local="clr-namespace:IngresoPedidos.Helpers"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         
@@ -91,6 +91,7 @@
         </Grid>
 
         <DataGrid x:Name="dgPedidos" Grid.Row="1" ColumnWidth="*" Margin="0,0,0,0" Padding="0,0,0,0">
+            <!--ItemsSource="{Binding Source={x:Static local:StaticData.ListaPrincipal}}"-->
             <DataGrid.Resources>
                 <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="DarkGray"/>
             </DataGrid.Resources>
@@ -98,7 +99,7 @@
             <DataGrid.ContextMenu>
                 <ContextMenu>
                     
-                    <MenuItem x:Name="ctxmnuEditar" Header="Editar registro" InputGestureText="Ctrl+E">
+                    <MenuItem x:Name="ctxmnuEditar" Header="Editar registro" InputGestureText="Ctrl+E" Click="CtxmnuEditar_Click">
                         <MenuItem.Icon>
                             <Image Source="/IngresoPedidos;component/Resources/lapiz_16x16.ico"/>
                         </MenuItem.Icon>
@@ -175,7 +176,7 @@
                 <DataGridTemplateColumn Header="ANTERIOR" MaxWidth="110">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock><Hyperlink Click="Hyperlink_Click"><InlineUIContainer>
+                            <TextBlock><Hyperlink Click="HyperlinkAnterior_Click"><InlineUIContainer>
                                         <TextBlock Text="{Binding NumeroPedidoAnterior}" />
                                     </InlineUIContainer></Hyperlink></TextBlock>
                         </DataTemplate>
@@ -184,7 +185,7 @@
                 <DataGridTemplateColumn Header="SUCESOR" MaxWidth="110">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock><Hyperlink Click="Hyperlink_Click_1"><InlineUIContainer>
+                            <TextBlock><Hyperlink Click="HyperlinkSucesor_Click"><InlineUIContainer>
                                         <TextBlock Text="{Binding NumeroPedidoSucesor}"/>
                                 </InlineUIContainer></Hyperlink></TextBlock>
                         </DataTemplate>
